--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-ASSEMBLYAI_API_KEY="9aa1af995991410ab076ce596c8443be"
-ELEVENLABS_API_KEY="sk_547ff5c47532e95be7fdb6cff8701f99d5f020fa4a176d01"
+ASSEMBLYAI_API_KEY="Enter_your_API_Key"
+ELEVENLABS_API_KEY="Enter_Your_API_Key"
